[package]
name = "poker_tx_holdem"
version = "0.1.0"
edition = "2021"
description = "Texas Hold'em winner evaluator (2 players, 7 cards each)."
license = "MIT"
repository = "https://github.com/your-username/poker-tx-holdem"
readme = "README.md"

[lib]
name = "poker_tx_holdem"
path = "src/lib.rs"

[dependencies]
